# boflink

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml  release.yaml
crates/boflink_arena/: Cargo.toml
crates/boflink_arena/src/: bump.rs  lib.rs  sync.rs  typed_arena.rs
crates/boflink_arena/src/bump/: boxed.rs  pool.rs  traits.rs
crates/boflink_arena/src/typed_arena/: arena_ref.rs  pool.rs  traits.rs
crates/boflink_index/: Cargo.toml
crates/boflink_index/src/: bit_set.rs  idx.rs  lib.rs  rayon.rs  slice.rs  vec.rs
crates/boflink_log/: Cargo.toml
crates/boflink_log/src/: lib.rs
crates/boflink_stdext/: Cargo.toml
crates/boflink_stdext/src/: fs.rs  time.rs
crates/coffyaml/: Cargo.toml
crates/coffyaml/src/archive/builder/: armap.rs  longnames.rs  mod.rs  sorted_armap.rs
crates/jamcrc/: Cargo.toml
crates/moduledef/: Cargo.toml  README.md
crates/moduledef/src/: base.rs  error.rs  exports.rs  file.rs  heapsize.rs  keyword.rs  lib.rs  library.rs  name.rs  parsers.rs  sections.rs  stacksize.rs  stub.rs  version.rs
crates/moduledef/tests/: basic.def  integration_test.rs
crates/objs2yaml/: Cargo.toml
crates/undname/: Cargo.toml  README.md
crates/undname/src/: error.rs  lib.rs  memproxy.rs
crates/undname/sys/: Cargo.toml
crates/undname/sys/src/: lib.rs
docs/: .gitignore  boflink.1.md
examples/: .editorconfig  README.md
examples/cmake-hello-world/: CMakeLists.txt  README.md
examples/cmake-hello-world/cmake/: SetupBoflink.cmake  boflink.specs.in
examples/cmake-hello-world/toolchains/: clang-mingw32.cmake  clang-mingw64.cmake  i686-w64-mingw32-gcc.cmake  x86_64-w64-mingw32ucrt-gcc.cmake
examples/custom-api/: .gitignore  GNUmakefile  GNUmakefile-clang.mk  README.md  makefile  makefile-clangcl.mk
examples/custom-api/custom-api/: custom-api.def  custom-api.h
examples/custom-api/src/: example.c
examples/hello-world/: .gitignore  GNUmakefile  GNUmakefile-clang.mk  README.md  makefile  makefile-clangcl.mk
examples/hello-world/src/: beacon.h  go.c  hello.c
examples/libraries/: .gitignore  GNUmakefile  GNUmakefile-clang.mk  README.md  makefile  makefile-clangcl.mk
examples/libraries/mylib/: mylib.c  mylib.h
examples/libraries/src/: example.c
examples/mingw-standalone/: README.md  compile-clang.sh  compile-mingw.sh  compile-mingwucrt.sh
src/: archive.rs  arena.rs  arguments.rs  beacon.def  bit_set.rs  bofapi.rs  chunks.rs  cli.rs  coff.rs  concurrent_indexmap.rs  context.rs  directives.rs  drectve.rs  error.rs  fsutils.rs  gc_sections.rs  inputs.rs  lib.rs  libsearch.rs  linker.rs  logging.rs  main.rs  object.rs  outputs.rs  pathed_item.rs  reader.rs  sparse.rs  sparse_set.rs  stdext.rs  symbols.rs  syncpool.rs  timing.rs  undname.rs  workqueue.rs
src/api/: beaconapi.rs  mod.rs
src/coff/: file.rs  machine.rs  relocs.rs  section.rs  symbol.rs
src/drectve/: mod.rs  parsers.rs
src/graph/: built.rs  cache.rs  edge.rs  link.rs  mod.rs  output.rs  spec.rs
src/graph/node/: coff.rs  library.rs  section.rs  symbol.rs
src/linker/: builder.rs  configured.rs  error.rs  mod.rs
src/linkobject/: import.rs
src/linkobject/archive/: error.rs  legacy_importlib.rs  mod.rs
src/outputs/: tests.rs
src/stdext/: fs.rs  mod.rs  path.rs  time.rs
tests/: integration_tests.rs  linker.rs
tests/bss/: commons.yaml  commons_sorted.yaml  mod.rs
tests/comdats/: any.yaml  mod.rs
tests/gc_sections/: mod.rs
tests/misc/: externals_relaxation.yaml  mod.rs  no_merge_groups.yaml
tests/relocations/: addr_intrasection.yaml  mod.rs  same_section_symbol_flattened.yaml
tests/utils/: archive_searcher.rs  macros.rs  mod.rs  testfs.rs  tools.rs
xtask/: Cargo.toml
xtask/src/: tasks.rs
xtask/src/utils/: shell.rs
