[workspace]
members = ["crates/*", "xtask"]

[package]
name = "boflink"
version = "0.6.2"
authors = ["Matt Ehrnschwender <matthewe2020@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = """
Linker for Beacon Object Files.
"""
readme = "README.md"
homepage = "https://github.com/MEhrn00/boflink"
repository = "https://github.com/MEhrn00/boflink"
license = "BSD-3-Clause"
publish = false


[dependencies]
argfile = "0.2.1"
bitflags = "2.9.0"
bumpalo = { version = "3.17.0", features = ["boxed"] }
cpp_demangle = "0.5.0"
crc32fast = "1.5.0"
indexmap = "2.7.1"
log = { version = "0.4.26", features = ["std"] }
memmap2 = "0.9.9"
nom = "8.0.0"
num_enum = "0.7.3"
os_str_bytes = "7.1.1"
rayon = "1.11.0"
rustc-demangle = "0.1.26"
typed-arena = "2.0.2"

[dependencies.object]
version = "0.38.0"
default-features = false
features = ["archive", "coff", "write", "read_core", "unaligned"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug"
] }

[dev-dependencies]
assert_cmd = "2.1.2"
tempfile = "3.24.0"

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
