[workspace]
members = ["crates/*", "xtask"]

[package]
name = "boflink"
version = "0.6.2"
authors = ["Matt Ehrnschwender <matthewe2020@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = """
Linker for Beacon Object Files.
"""
readme = "README.md"
homepage = "https://github.com/MEhrn00/boflink"
repository = "https://github.com/MEhrn00/boflink"
license = "BSD-3-Clause"
publish = false


[dependencies]
anyhow = "1.0.92"
argfile = "1.0.0"
bitflags = "2.9.0"
bumpalo = "3.17.0"
cpp_demangle = "0.5.0"
crc32fast = "1.5.0"
indexmap = "2.7.1"
log = { version = "0.4.26", features = ["std"] }
nom = "8.0.0"
num_enum = "0.7.3"
os_str_bytes = "7.1.1"
thiserror = "2.0.11"
typed-arena = "2.0.2"

[dependencies.clap]
version = "4.5.24"
default-features = false
features = [
  "std",
  "color",
  "help",
  "suggestions",
  "usage",
  "derive",
  "string",
  "cargo",
]

[dependencies.object]
version = "0.38.0"
default-features = false
features = ["archive", "coff", "write", "read"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug"
] }

[dev-dependencies]
assert_cmd = "2.1.2"
tempfile = "3.24.0"

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
