[package]
name = "undname"
version = "0.1.0"
authors = ["Matt Ehrnschwender <matthewe2020@gmail.com>"]
edition = "2024"
description = "Wrapper around undname for demangling Microsoft C++ mangled symbols."
readme = "README.md"
homepage = "https://github.com/MEhrn00/boflink/tree/main/crates/undname"
repository = "https://github.com/MEhrn00/boflink"
publish = false

[dependencies]
bitflags = "2.9.1"
undname-sys = { path = "sys" }
thiserror = "2.0.12"

[features]
sys = []
